@@ -1,4 +1,5 @@
 useDynLib(Rcpp, 
+    # .Call functions
     as_character_externalptr,
     
     CppField__get, CppField__set,
@@ -9,7 +10,10 @@ useDynLib(Rcpp,
     
     Module__classes_info,Module__complete,Module__get_class,
     Module__has_class,Module__has_function,Module__functions_arity,
-    Module__name
+    Module__name, 
+    
+    # .External functions
+    CppMethod__invoke, InternalFunction_invoke, Module__invoke, class__newInstance
 )
 
 import( methods )
