@@ -27,6 +27,8 @@
 
 // borrowed from Matrix
 #define CALLDEF(name, n)  {#name, (DL_FUNC) &name, n}
+#define EXTDEF(name)  {#name, (DL_FUNC) &name, -1}
+
 
 // TODO: check that having this static does not mess up with 
 //       RInside, and move it within init_Rcpp_routines otherwise
@@ -52,6 +54,15 @@ static R_CallMethodDef callEntries[]  = {
     {NULL, NULL, 0}
 }; 
 
+static R_ExternalMethodDef extEntries[]  = {
+    EXTDEF(CppMethod__invoke),
+    EXTDEF(InternalFunction_invoke),
+    EXTDEF(Module__invoke), 
+    EXTDEF(class__newInstance), 
+    
+    {NULL, NULL, 0}
+} ;
+
 // this is called by R_init_Rcpp that is in Module.cpp
 void init_Rcpp_routines(DllInfo *info){
   /* Register routines, allocate resources. */
@@ -59,7 +70,7 @@ void init_Rcpp_routines(DllInfo *info){
       NULL /* .C*/, 
       callEntries /*.Call*/,
       NULL /* .Fortran */,
-      NULL /*.Extern*/
+      extEntries /*.External*/
   );
 }
           
